[gd_scene load_steps=22 format=2]

[ext_resource path="res://pieces/auto_sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/enemies/electrodrill.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/electrodrill_dolly.png" type="Texture" id=3]
[ext_resource path="res://entities/enemies/electrodrill_connection.png" type="Texture" id=4]
[ext_resource path="res://entities/enemies/electrodrill_head.png" type="Texture" id=5]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=6]
[ext_resource path="res://fsm/states/state.gd" type="Script" id=7]
[ext_resource path="res://fsm/states/stunned.gd" type="Script" id=8]
[ext_resource path="res://fsm/states/patrol.gd" type="Script" id=9]
[ext_resource path="res://entities/enemies/data/electrodrill.tres" type="Resource" id=10]
[ext_resource path="res://pieces/walledge_detector.tscn" type="PackedScene" id=11]
[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://pieces/punch_detector.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 2, 16 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/head1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/head0:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/connection:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/head0:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flippable/dolly:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("flippable/dolly:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("flippable/dolly:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "flail"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/connection:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/head0:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/head1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/dolly:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, -5.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "nothing"
length = 0.001
loop = true

[sub_resource type="Animation" id=4]
resource_name = "preextend"
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/head0:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 0, 20 ), Vector2( 0, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/dolly:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 6 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/dolly:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/dolly:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "unextend"
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/head0:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 24 ), Vector2( 0, 20 ), Vector2( 0, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/dolly:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 6 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/dolly:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/dolly:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="electrodrill" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
flip_path = NodePath("flippable")
gravity_active = false
enemy_data = ExtResource( 10 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="connection" parent="flippable" instance=ExtResource( 1 )]
visible = false
use_parent_material = true
position = Vector2( 0, 8 )
texture = ExtResource( 4 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 16 )

[node name="head0" parent="flippable" instance=ExtResource( 1 )]
use_parent_material = true
position = Vector2( 0, 24 )
texture = ExtResource( 5 )
hframes = 4

[node name="head1" parent="flippable" instance=ExtResource( 1 )]
visible = false
use_parent_material = true
position = Vector2( 0, 24 )
texture = ExtResource( 5 )
hframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 128, 16 )

[node name="punch_detector" parent="flippable/head1" instance=ExtResource( 13 )]

[node name="hitbox" type="CollisionShape2D" parent="flippable/head1/punch_detector"]
shape = SubResource( 8 )

[node name="dolly" parent="flippable" instance=ExtResource( 1 )]
use_parent_material = true
position = Vector2( 0, 8 )
texture = ExtResource( 3 )
hframes = 2

[node name="walledge_detector" parent="flippable" instance=ExtResource( 11 )]
position = Vector2( 20, -8 )
scale = Vector2( 1, -1 )

[node name="hurtbox" parent="." instance=ExtResource( 12 )]

[node name="hitbox" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 7 )

[node name="blockade" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="hitbox" type="CollisionShape2D" parent="blockade"]
shape = SubResource( 7 )
disabled = true

[node name="ground_finder" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 2048 )
collision_mask = 4

[node name="ceiling_finder" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, -2048 )
collision_mask = 4

[node name="whoosh" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 42 )
points = PoolVector2Array( 0, 128, 0, 0 )
default_color = Color( 0.137255, 0.403922, 0.305882, 1 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 6 )
animator_path = NodePath("../animator")

[node name="grounded" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "flail"
auto_proceed = "unextend"
duration = 2.0

[node name="unextend" type="Node" parent="fsm"]
script = ExtResource( 7 )
animation = "unextend"
auto_proceed = "idle"

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 9 )
animation = "nothing"
still_animation = "nothing"
run_animation = "nothing"

[node name="preextend" type="Node" parent="fsm"]
script = ExtResource( 7 )
animation = "preextend"
auto_proceed = "extended"

[node name="extended" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "nothing"
auto_proceed = "unextend"
duration = 10.0

[node name="animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/flail = SubResource( 5 )
anims/nothing = SubResource( 6 )
anims/preextend = SubResource( 4 )
anims/unextend = SubResource( 3 )

[node name="unwhoosher" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="punched" from="flippable/head1/punch_detector" to="." method="_on_punch_detector_punched"]
[connection signal="updated" from="flippable/walledge_detector" to="fsm/idle" method="_on_walledge_detector_updated"]
[connection signal="entered" from="fsm/unextend" to="." method="_on_unextend_entered"]
[connection signal="entered" from="fsm/idle" to="." method="_on_idle_entered"]
[connection signal="entered" from="fsm/extended" to="." method="_on_extended_entered"]
[connection signal="timeout" from="unwhoosher" to="." method="_on_unwhoosher_timeout"]
